Many HTML / CSS / Template changes.
Added the grid_stat_head CSS class to Panel Debug.
Added the panel_plugin_meta CSS class to the Plugin Manager.
Added some missing panel_right_button classes to the buttons for the rows in the Plugin Manager.
Added some missing the_form CSS classes for Nox.
Added a missing phrase for an update button in panel_themes_menus_items.
Replaced a legacy float: right; in the User Manager with to_right.
Removed some superfluous legacy inline CSS in the User Manager.
Tweaked the amount of padding for the title in the Account Manager for Nox.
Tweaked the amount of padding for the title in the Control Panel for Nox.
Tweaked the padding for panel_right_button for Nox.
Fixed the UI for the Plugin Manager in Nox.
Tweaked the padding for the grid heads in Panel Debug for Nox.

Began work on a nicer looking User Manager in Nox.

--- a/templates/panel_themes_menus_item_edit.html
+++ b/templates/panel_themes_menus_item_edit.html
@@ -8,7 +8,7 @@
 		<div class="rowitem"><h1>{{lang "panel_themes_menus_edit_head"}}</h1></div>
 	</div>
 	<form action="/panel/themes/menus/item/edit/submit/{{.Item.ID}}?session={{.CurrentUser.Session}}" method="post">
-		<div id="panel_themes_menu_item_edit" class="colstack_item">
+		<div id="panel_themes_menu_item_edit" class="colstack_item the_form">
 			{{/** TODO: Let an admin move a menu item from one menu to another? **/}}
 			<div class="formrow">
 				<div class="formitem formlabel"><a>{{lang "panel_themes_menus_name"}}</a></div>
