--- a/templates/panel_themes_menus_items.html
+++ b/templates/panel_themes_menus_items.html
@@ -16,14 +16,14 @@
 			</div>{{end}}
 		</div>
 		<div class="colstack_item rowlist panel_submitrow">
-			<div class="rowitem"><button id="panel_menu_items_order_button" class="formbutton">Update</button></div>
+			<div class="rowitem"><button id="panel_menu_items_order_button" class="formbutton">{{lang "panel_themes_menus_edit_update_button"}}</button></div>
 		</div>
 		<div class="colstack_item colstack_head">
 			<div class="rowitem"><h1>{{lang "panel_themes_menus_create_head"}}</h1></div>
 		</div>
 	<form action="/panel/themes/menus/item/create/submit/?session={{.CurrentUser.Session}}" method="post">
 		<input name="mid" value="{{.MenuID}}" type="hidden" />
-		<div id="panel_themes_menu_item_create" class="colstack_item">
+		<div id="panel_themes_menu_item_create" class="colstack_item the_form">
 			{{/** TODO: Let an admin move a menu item from one menu to another? **/}}
 			<div class="formrow">
 				<div class="formitem formlabel"><a>{{lang "panel_themes_menus_name"}}</a></div>
