Pin Docker to 1.10 not the patch version, otherwise things could go horribly wrong. Added the_form to the Page Editor. Added a phrase for the Menu Editor title rather than reusing the Menu Manager's one. Replaced a dotted border I missed in Tempra Simple. Fixed a floater in the User Manager for Shadow. Tweaked the form CSS for Nox. Tweaked panel_submitrow in Nox.
Continued work on the User Manager for Nox.

--- a/templates/panel_users.html
+++ b/templates/panel_users.html
@@ -12,8 +12,8 @@
 			<img class="bgsub" src="{{.Avatar}}" alt="{{.Name}}'s Avatar" />
 			<a class="rowTitle editable_block"{{if $.CurrentUser.Perms.EditUser}} href="/panel/users/edit/{{.ID}}?session={{$.CurrentUser.Session}}"{{end}}>{{.Name}}</a>
 			<a href="{{.Link}}" class="tag-mini profile_url">{{lang "panel_users_profile"}}</a>
-			{{if (.Tag) and (.IsSuperMod)}}<span class="to_right"><span class="panel_tag">{{.Tag}}</span></span>{{end}}
 			<span class="panel_floater">
+				{{if (.Tag) and (.IsSuperMod)}}<span class="panel_tag">{{.Tag}}</span></span>{{end}}
 				{{if .IsBanned}}<a href="/users/unban/{{.ID}}?session={{$.CurrentUser.Session}}" class="panel_tag panel_right_button ban_button">{{lang "panel_users_unban"}}</a>{{else if not .IsSuperMod}}<a href="/user/{{.ID}}#ban_user" class="panel_tag panel_right_button ban_button">{{lang "panel_users_ban"}}</a>{{end}}
 				{{if not .Active}}<a href="/users/activate/{{.ID}}?session={{$.CurrentUser.Session}}" class="panel_tag panel_right_button">{{lang "panel_users_activate"}}</a>{{end}}
 			</span>
