--- a/templates/panel_pages_edit.html
+++ b/templates/panel_pages_edit.html
@@ -6,7 +6,7 @@
 		<div class="rowitem"><h1>{{lang "panel_pages_edit_head"}}</h1></div>
 	</div>
 	<form action="/panel/pages/edit/submit/{{.Page.ID}}?session={{.CurrentUser.Session}}" method="post">
-		<div id="panel_page_edit_item" class="colstack_item">
+		<div id="panel_page_edit_item" class="colstack_item the_form">
 			<div class="formrow">
 				<div class="formitem formlabel"><a>{{lang "panel_pages_name"}}</a></div>
 				<div class="formitem"><input name="name" type="text" value="{{.Page.Name}}" /></div>
