--- a/templates/panel_themes_menus_items.html
+++ b/templates/panel_themes_menus_items.html
@@ -3,7 +3,7 @@
 {{template "panel_menu.html" . }}
 	<main class="colstack_right">
 		<div class="colstack_item colstack_head">
-			<div class="rowitem"><h1>{{lang "panel_themes_menus_head"}}</h1></div>
+			<div class="rowitem"><h1>{{lang "panel_themes_menus_items_head"}}</h1></div>
 		</div>
 		<div id="panel_menu_item_holder" class="colstack_item rowlist">
 			{{range .ItemList}}
