--- a/themes/tempra-simple/public/main.css
+++ b/themes/tempra-simple/public/main.css
@@ -813,8 +813,7 @@ input[type=checkbox]:checked + label.poll_option_label .sel {
 	font-size: 30px;
 	border-width: 1px;
 	background-color: #FFFFFF;
-	border-style: dotted;
-	border-color: #505050;
+	border: 1px solid hsl(0,0%,80%);
 	padding: 0px;
 	padding-left: 5px;
 	padding-right: 5px;
@@ -828,6 +827,7 @@ input[type=checkbox]:checked + label.poll_option_label .sel {
 	display: block;
 	text-decoration: none;
 	color: #505050;
+	padding: 2px;
 }
 .prev_button {
 	left: 14px;
