--- a/themes/nox/public/panel.css
+++ b/themes/nox/public/panel.css
@@ -130,17 +130,26 @@ button, .formbutton {
 	/*background: rgb(110,110,210);
 	color: rgb(250,250,250);*/
 }
-button, .formbutton, .panel_right_button {
+button, .formbutton, .panel_right_button, #panel_users .profile_url {
 	background: rgb(100,100,200);
+}
+#panel_users .panel_tag:not(.panel_right_button) {
+	background: rgb(50,150,50);
 }
 /*.formlabel {
 	font-size: 17px;
 }*/
-.panel_right_button {
+.panel_right_button, #panel_users .panel_tag:not(.panel_right_button), #panel_users .profile_url {
 	margin-left: 2px;
 	padding: 5px;
 	padding-left: 6px;
 	padding-right: 6px;
+}
+#panel_users .panel_tag:not(.panel_right_button), #panel_users .profile_url {
+	color: rgb(250,250,250);
+    font-size: 15px;
+    text-align: center;
+	border-radius: 3px;
 }
 .edit_button:after {
 	content: "{{index .Phrases "panel_edit_button_text"}}";
@@ -214,6 +223,8 @@ button, .formbutton, .panel_right_button {
 }
 #panel_users .rowitem .panel_floater {
 	order: 2;
+	margin-top: 8px;
+	margin-right: auto;
 }
 
 .panel_submitrow {
