--- a/themes/tempra-simple/public/main.css
+++ b/themes/tempra-simple/public/main.css
@@ -241,6 +241,13 @@ li a {
 
 .rowhead .rowitem, .colstack_head .rowitem {
 	background-color: rgb(252,252,252);
+	display: flex;
+}
+.rowhead .rowitem select, .colstack_head .rowitem select {
+	padding-top: 2px;
+	padding-bottom: 2px;
+	margin-top: -3px;
+	margin-bottom: -2px;
 }
 .rowhead h1, .colstack_head h1 {
 	-webkit-margin-before: 0;
@@ -249,6 +256,7 @@ li a {
 	margin-block-end: 0;
 	font-weight: normal;
 	font-size: 16px;
+	margin-left: 4px;
 }
 
 .rowitem {
